[workspace]
resolver = "2"
members = [
    "polyhal2",
    "polyhal2-core",
    "polyhal2-boot",
    "polyhal2-debug",
    "polyhal2-device",
    "polyhal2-pagetable",
    "example",
]

[workspace.package]
authors = ["yfblock"]
edition = "2024"
license = "MIT"


[workspace.dependencies]
polyhal2-core = { path = "polyhal2-core" }
polyhal2-boot = { path = "polyhal2-boot" }
polyhal2-debug = { path = "polyhal2-debug" }
polyhal2-device = { path = "polyhal2-device" }
tock-registers = { version = "0.9", default-features = false }
polyhal2-pagetable = { path = "polyhal2-pagetable" }

bitflags = "2.0.2"
spin = "0.9.8"
log = "0.4"

# loongarch64 dependencies
loongArch64 = "0.2.4"

# aarch64 dependencies
aarch64-cpu = "10.0"
arm_pl011 = "0.1.0"

# x86_64 dependencies
x86_64 = "0.14"
multiboot = "0.8.0"
raw-cpuid = "11.0"
