[package]
name = "polyhal2-boot"
version = "0.1.0"
edition = "2024"

[features]
mmu = []

[dependencies]
log = { workspace = true }
polyhal2-core = { workspace = true }
polyhal2-pagetable = { workspace = true }
polyhal2-device = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_pl011 = { workspace = true }
aarch64-cpu = { workspace = true }
