[package]
name = "polyhal2-boot"
version = "0.1.0"
edition = "2024"

[features]
mmu = []

[dependencies]
log = { workspace = true }
polyhal2-core = { workspace = true }
polyhal2-pagetable = { workspace = true }
polyhal2-device = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { workspace = true }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
multiboot = { workspace = true }
raw-cpuid = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }
