[package]
name = "polyhal2-debug"
version = "0.1.0"
edition = "2024"

[features]
log = []

[dependencies]
polyhal2-core = { workspace = true }
polyhal2-boot = { workspace = true }
spin = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_pl011 = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { workspace = true, features = ["legacy"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
