[package]
name = "polyhal2-pagetable"
version = "0.1.0"
edition = "2024"

[dependencies]
polyhal2-core = { workspace = true }
bitflags = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { workspace = true }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
